Fix wrong background color of empty cell

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -393,6 +393,10 @@
     -fx-effect: innershadow(gaussian, -COLOR_PRIMARY, 10, 0, 0, 0);
 }
 
+#personListView {
+    -fx-background-color: -COLOR_PRIMARY_LIGHT;
+}
+
 #resultDisplay .content {
     -fx-background-color: transparent, -COLOR_PRIMARY_LIGHT, transparent, -COLOR_PRIMARY_LIGHT;
     -fx-background-radius: 0;
